--- a/aula03.html
+++ b/aula03.html
@@ -18,7 +18,7 @@
     <a href="#" id="link3">link3</a>
 
     
-    <script src="jquery.min.js"></script>
+    <script src="src/js/jquery.min.js"></script>
     <script>
         $(document).ready(function (){
 
