--- a/aula04.html
+++ b/aula04.html
@@ -24,7 +24,7 @@
 
 
         
-    <script src="jquery.min.js"></script>
+    <script src="src/js/jquery.min.js"></script>
     <script>
         
         $('span').hide().delay(1000).fadeIn().css('color','green')
