--- a/aula06.html
+++ b/aula06.html
@@ -10,8 +10,17 @@
 </head>
     <body>
       <div class="ex1">Aguardando Ação</div>
-      <p class="ev1">Um Clique</p>
-      <p class="ev2">Dois Clique</p>
+      <!---       
+        <p class="ev1">Um Clique</p>
+        <p class="ev2">Dois Clique</p>
+        <input type="text" class="ev3">
+        <p class="ev4">Passe o mouse</p>
+        <p class="ev5">Clique e Solte!</p>
+      -->
+
+      <p class="ev6">Entra e <span>Sai!</span></p>
+      <p class="ev7">Mouse <span>Hover!</span></p>
+      <p class="ev8">Mova o Maouse no Elemento!</p>
     
 
 
