--- a/aula07.html
+++ b/aula07.html
@@ -15,16 +15,16 @@
       
       <form action="">
         <label>
-          <input type="text" placeholder="Digite seu nome">
+          <input type="text" class="key" placeholder="Digite seu nome">
         </label>
         <label>
-          <input type="text" placeholder="Digite seu Email">
+          <input type="text" class="key" placeholder="Digite seu Email">
         </label>
         <label>
-          <input type="text" placeholder="Digite sua Cidade">
+          <input type="text" class="key" placeholder="Digite sua Cidade">
         </label>
         <label>
-          <textarea rows="3" placeholder="Digite seu Recado"></textarea>
+          <textarea rows="3" class="key" placeholder="Digite seu Recado"></textarea>
         </label>
         <label>
           <button>Botão</button>
